Bug 152797 - applethandle doesn't dissapear
Summary: applethandle doesn't dissapear
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 153294 154125 154128 154732 155535 155956 156227 157046 158001 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-11-23 20:11 UTC by Edwin Schepers
Modified: 2008-06-22 14:56 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screencast (891.10 KB, video/ogg)
2008-06-22 14:56 UTC, Christophe Marin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Edwin Schepers 2007-11-23 20:11:07 UTC
Version:            (using KDE 3.96.1 (KDE 4.0 >= 20071120), compiled sources)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.22-5-default

When I move the Analog clock plasmoid, and drop it while still moving the mouse, the surrounding transparent rectangle does not dissapear.

Regards,
Edwin
Comment 1 Aaron J. Seigo 2007-11-23 20:15:27 UTC
there are many ways to get the applet handle to not disappear; we simply do not get reliable unhover events from qgraphicsview. i think we'll have to introduce a timer hack to get rid of the handles on uncaught unhovers.
Comment 2 Aaron J. Seigo 2007-12-02 20:01:06 UTC
*** Bug 153294 has been marked as a duplicate of this bug. ***
Comment 3 Chani 2007-12-15 19:09:57 UTC
*** Bug 154125 has been marked as a duplicate of this bug. ***
Comment 4 Pino Toscano 2007-12-15 19:26:15 UTC
*** Bug 154128 has been marked as a duplicate of this bug. ***
Comment 5 David 2007-12-16 12:24:49 UTC
It's the same when moving the cursor from a plasmoid to a window or if just moving the mouse away too quickly.

Though I found something:
The battery monitor plasmoid also enlightens the "No Battery" text (at least that's what it says on a desktop computer) and when moving the mouse away, the "No Battery" text always gets back normal, always, even if the rectangle frame with buttons is still around the plasmoids. Maybe use the code that's for "No Battery" text.
Comment 6 Aaron J. Seigo 2007-12-16 20:06:50 UTC
they both rely on dependable hover out events from QGraphicsScene. there is no special code in the battery applet.
Comment 7 David 2007-12-16 20:16:03 UTC
Well, it works for the "No Battery" text. So it should be possible to make it work for the frame and buttons.
Comment 8 Aaron J. Seigo 2007-12-16 20:44:01 UTC
Peter, with all due respect, i understand where you are coming from but unless you are actually looking through the code i don't think it's realistic to be able to offer code-level input.

it's actually due to an interesting quirk in the QGraphicsScene where only items that have previously received a hover in get hover outs. since the applet handle gets created in response to a hover event, it doesn't get a hover in, so it doesn't get a hover out. once created, it will get a hover in and then a hover out afterwards resulting in proper hiding after being shown only.
Comment 9 Aaron J. Seigo 2008-01-04 21:59:52 UTC
*** Bug 154732 has been marked as a duplicate of this bug. ***
Comment 10 Dorian Vasco 2008-01-07 19:54:47 UTC
I have the problem too, when I move the mouse fast over multiple icons on the desktop.
Comment 11 Alexis MENARD 2008-01-08 00:06:53 UTC
<hack>
I have an idea, it's just a proposition. I work on the same problem in my work and i have think about something. It's not a solution but it can works.

We can add an automatic hide for the applet handle. For example if there is no mouse event on the item during x seconds, handle disappear. Ok it will not fix the issue but the handle will be hide. For KDE 4.0 it can be a solution isn't it?

</hack>
Comment 12 Aaron J. Seigo 2008-01-10 22:02:19 UTC
*** Bug has been marked as fixed ***.
Comment 13 Marco Martin 2008-01-12 18:17:45 UTC
*** Bug 155535 has been marked as a duplicate of this bug. ***
Comment 14 David 2008-01-16 19:13:52 UTC
Was this fixed in SVN, because this bug is still in KDE4, though it doesn't happen as often as it did before.
Comment 15 George Goldberg 2008-01-17 02:59:52 UTC
*** Bug 155956 has been marked as a duplicate of this bug. ***
Comment 16 Chani 2008-01-20 14:22:27 UTC
*** Bug 156227 has been marked as a duplicate of this bug. ***
Comment 17 Pino Toscano 2008-01-31 21:29:05 UTC
*** Bug 157046 has been marked as a duplicate of this bug. ***
Comment 18 Pino Toscano 2008-02-05 20:34:42 UTC
*** Bug 157046 has been marked as a duplicate of this bug. ***
Comment 19 Pino Toscano 2008-02-18 12:34:56 UTC
*** Bug 158001 has been marked as a duplicate of this bug. ***
Comment 20 Marcus Better 2008-04-09 14:32:14 UTC
This bug, or rather #153294, is still present at least in Debian libplasma1 4:4.0.66+svn791114-3, i.e. svn revision 791114. The bug log doesn't say what commit fixed it, but I guess this is more recent.

Please repoen, or unmerge #153294 and reopen that one.
Comment 21 jos poortvliet 2008-05-30 21:29:47 UTC
As aaron said, it's not fixed - the issue is due to some weird things in Qt. I guess by closing it he meant he wants to wait for TT to fix it...
Comment 22 Christophe Marin 2008-06-22 11:08:44 UTC
*** Bug 164628 has been marked as a duplicate of this bug. ***
Comment 23 Christophe Marin 2008-06-22 14:56:08 UTC
Created attachment 25518 [details]
Screencast

screencast (Ogg video format)
Comment 24 Christophe Marin 2008-06-22 14:56:44 UTC
Comment on attachment 25518 [details]
Screencast

removing.. wrong bug report. sorry ;)