control the disappear of the handle with another timer since moving the mouse too fast over the handle could lead to a lost hover leave event start a singleshot, when it ticks check if the mouse is still on the handle

BUG: 152797

svn path=/trunk/KDE/kdebase/workspace/libs/plasma/; revision=823054